@@ -21,7 +21,7 @@
 .\" USA.
 .TH gaim 1
 .SH NAME
-Gaim v0.59 \- Instant Messaging client
+Gaim v0.59.1 \- Instant Messaging client
 .SH SYNOPSIS
 .TP 5
 \fBgaim \fI[options]\fR
