@@ -42,6 +42,7 @@ EXTRA_DIST =	ab.xpm				\
 		fontface.xpm			\
 		fontface2.xpm			\
 		free_icon.xpm			\
+		gaim.png			\
 		gaim.xpm			\
 		gg_suncloud.xpm			\
 		gg_sunred.xpm			\
@@ -127,7 +128,7 @@ gaimdistpixdir = $(datadir)/pixmaps/gaim
 gaimdistpix_DATA = away.png connect.png msgpend.png offline.png online.png
 
 distpixmapdir = $(datadir)/pixmaps
-distpixmap_DATA = gaim.xpm
+distpixmap_DATA = gaim.png
 	
 else
 
@@ -139,12 +140,12 @@ gaimdistpmdir = $(gnomedata)/pixmaps/gaim
 gaimdistpm_DATA = away.png connect.png msgpend.png offline.png online.png
 
 gaimpixmapdir = $(gnomedata)/pixmaps
-gaimpixmap_DATA = gaim.xpm
+gaimpixmap_DATA = gaim.png
 
 else
 
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA = gaim.xpm
+pixmap_DATA = gaim.png
 	
 endif
 
